文档：closeout 同步 IT 真跑通 + 3 个真实 bug 修复
worktree HEAD 移到 2854bb52f（27 个 commit）。
新增 §4.4 记录集成测试首跑曝光的真实 bug：
1) @NotNull + @CreationTimestamp flush 顺序冲突
2) save() 不立即 flush 导致唯一约束晚到（saveAndFlush 修）
3) 测试缺 .with(csrf()) 被 Spring Security 403
另注 JDK 25 上 surefire 必传 -DargLine=-Dnet.bytebuddy.experimental=true。
§3 收尾流程命令同步到当前 service 名 + byte-buddy 标志。
§2 表中 SandboxApi 覆盖率与 SandboxApiIntegrationTest 状态从"待环境跑"改为已通过。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>